--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,3 +2,11 @@
 	width: 142px;
 	height: 33px;
 }
+
+@media screen and (max-width: 576px) {
+	.header__logo {
+		margin-left: 8.43vw;
+		width: 104px;
+		height: 25px;
+	}
+}
