--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -12,8 +12,11 @@
 	}
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 576px) {
 	.header {
-
+		width: 100%;
+		margin-top: 28px;
+		margin-bottom: 42px;
+		height: 56px;
 	}
 }
