--- a/blocks/profile/__add-btn/profile__add-btn.css
+++ b/blocks/profile/__add-btn/profile__add-btn.css
@@ -1,6 +1,6 @@
 .profile__add-btn {
-	width: 11.71vw;
-	height: 3.9vw;
+	width: 150px;
+	height: 50px;
 	background-image: url(../../../Images/Profile/Add-Button.svg);
 	background-size: cover;
 	background-color: #000;
@@ -14,11 +14,28 @@
 	opacity: 0.6;
 }
 
-@media screen and (min-width:1280px) {
+@media screen and (max-width:768px) {
 	.profile__add-btn{
-		width: 150px;
+		width: 120px;
+		height: 40px;
+	}
+}
+
+@media screen and (max-width:660px) {
+	.profile__add-btn{
+		width: 75px;
+		height: 25px;
+	}
+}
+
+
+
+@media screen and (max-width:576px) {
+	.profile__add-btn{
+		background-image: url(../../../Images/Profile/Add-Button-mobile.svg);
+		width: 282px;
 		height: 50px;
-		margin-left: 244px;
+		margin: 33px auto 0 auto;
 	}
 }
 
