--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -10,7 +10,14 @@
 }
 
 @media screen and (min-width:1280px) {
-	.profile__avatar{
+	.profile__avatar {
 		margin-right: 30px;
+	}
+}
+
+@media screen and (max-width:576px) {
+	.profile__avatar {
+		margin-right: 0;
+		margin-bottom: 26px;
 	}
 }
