--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -2,25 +2,38 @@
 	font-weight: 500;
 	font-size: 42px;
 	line-height: 48px;
-	margin: 0 0 11px 0;
+	margin: 0;
 	padding: 0;
 	width: 22.96vw;
+	text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (min-width:1280px) {
 	.profile__name {
-		width: 294px;;
+		width: 294px;
 	}
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width:1200px) {
 	.profile__name {
-		font-size: 36px;
+		font-size: 38px;
+		line-height: 44px;
 	}
 }
 
-@media screen and (max-width:950px) {
+@media screen and (max-width:768px) {
 	.profile__name {
-		font-size: 30px;
+		font-size: 25px;
+		line-height: 30px;
+	}
+}
+
+@media screen and (max-width:576px) {
+	.profile__name {
+		font-size: 27px;
+		line-height: 33px;
+		width: 59.375vw;
 	}
 }
