--- a/blocks/profile/__user/profile__user.css
+++ b/blocks/profile/__user/profile__user.css
@@ -1,5 +1,14 @@
-.profile__user{
+.profile__user {
 	display: flex;
 	align-items: baseline;
 	width: 100%;
+	margin-bottom: 11px;
+}
+
+@media screen and (max-width: 576px) {
+	.profile__user {
+		width: 88.125vw;
+		margin: 0 auto 7px auto;
+		justify-content: center;
+	}
 }
