--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,6 +4,9 @@
 	margin-bottom: 50px;
 }
 
-@media screen and (max-width:900px) {
-	.profile {}
+@media screen and (max-width:576px) {
+	.profile {
+		flex-direction: column;
+		margin-bottom: 36px;
+	}
 }
