--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
 	width: 68.75vw;
-	padding: 0;
-	margin: 45px auto 40px auto;
+	padding: 45px 0 0 0;
+	margin: 0 auto 40px auto;
 	height: 74px;
 	border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
