--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -8,7 +8,9 @@
 	padding: 0;
 	font-size: 18px;
 	line-height: 22px;
-	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	transition: background-color 1s ease;
 }
 
