--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,12 +1,13 @@
 .popup {
 	background-color: rgba(0, 0, 0, 0.5);
 	width: 100%;
-	min-height: 100%;
+	min-height: 100vh;
 	position: absolute;
 	top: 0;
 	left: 0;
-	display: flex;
+	display: none;
 	justify-content: center;
 	align-items: center;
 	z-index: 2;
+	
 }
