fix: исправлена семантика Html, JS

--- a/blocks/popup/__mission/popup__mission.css
+++ b/blocks/popup/__mission/popup__mission.css
@@ -9,7 +9,7 @@
 
 @media screen and (min-width:1280px) {
 	.popup__mission {
-		margin: 34px 0 54px 36px;
+		margin: 34px 0 40px 36px;
 	}
 }
 
@@ -29,7 +29,8 @@
 
 @media screen and (max-width:576px) {
 	.popup__mission {
-		margin: 7.8125vw auto 23.4375vw auto;
+		width: 74.375vw;
+		margin: 25px auto 67px auto;
 		font-size: 24px;
 		line-height: 29px;
 	}
