--- a/blocks/profile/__edit-btn/profile__edit-btn.css
+++ b/blocks/profile/__edit-btn/profile__edit-btn.css
@@ -2,7 +2,7 @@
 	width: 24px;
 	height: 24px;
 	background-image: url(../../../Images/Profile/Edit-Button.svg);
-	background-color: #000;
+	background-color: transparent;
 	background-size: cover;
 	background-repeat: no-repeat;
 	border: none;
