--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -15,7 +15,7 @@
 @media screen and (max-width: 576px) {
 	.header {
 		width: 100%;
-		margin-top: 28px;
+		padding-top: 28px;
 		margin-bottom: 42px;
 		height: 56px;
 	}
