--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -4,6 +4,8 @@
 	right: -40px;
 	width: 32px;
 	height: 32px;
+	border: none;
+	background-color: transparent;
 	background-image: url(../../../Images/Profile/Close-Icon.svg);
 	opacity: 1;
 	transition: opacity 1s ease;
