--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,22 +1,28 @@
-.popup__description {
+.popup__input {
 	border-top: 0;
 	border-left: 0;
 	border-right: 0;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-	width: 27.96vw;
-	height: 27px;
+	width: 100%;
+	height: 33px;
 	padding: 0;
-	margin: 0 auto 48px auto;
+	margin: 0 auto 22px auto;
+	font-size: 14px;
+	line-height: 17px;
 }
 
 @media screen and (min-width:1280px) {
-	.popup__description {
+	.popup__input {
 		width: 358px;
 	}
 }
 
+.popup__input:last-of-type {
+	margin-bottom: 50px;
+}
+
 @media screen and (max-width:576px) {
-	.popup__description {
+	.popup__input:last-of-type {
 		width: 74.375vw;
 		margin-bottom: 45px;
 	}
