--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -2,9 +2,9 @@
 	background-color: #000;
 	color: #FFF;
 	border: none;
-	width: 27.96vw;
+	width: 100%;
 	height: 3.9vw;
-	margin: 0 auto 2.89vw auto;
+	margin: 0 auto 0 auto;
 	padding: 0;
 	font-size: 18px;
 	line-height: 22px;
@@ -23,15 +23,12 @@
 	.popup__submit {
 		width: 358px;
 		height: 50px;
-		margin: 0 auto 37px auto;
 	}
 }
 
 @media screen and (max-width:576px) {
 	.popup__submit {
-		width: 75.375vw;
 		height: 46px;
-		margin: 0 auto 37px auto;
 		font-size: 14px;
 		line-height: 17px;
 	}
