--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,8 @@
 .popup {
 	background-color: rgba(0, 0, 0, 0.5);
 	width: 100%;
-	min-height: 100vh;
-	position: absolute;
+	min-height: 100%;
+	position: fixed;
 	top: 0;
 	left: 0;
 	display: none;
