--- a/blocks/profile/__user/profile__user.css
+++ b/blocks/profile/__user/profile__user.css
@@ -7,8 +7,8 @@
 
 @media screen and (max-width: 576px) {
 	.profile__user {
-		width: 88.125vw;
-		margin: 0 auto 7px auto;
+		width: 67.8125vw;
+		margin: 0 auto 7px 14.375vw;
 		justify-content: center;
 	}
 }
