--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -5,9 +5,11 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	display: none;
+	visibility: hidden;
+	opacity: 0;
 	justify-content: center;
 	align-items: center;
 	z-index: 2;
-	
+	transition: visibility 0.5s, opacity 0.5s linear;
+	display: flex;
 }
