--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -7,6 +7,7 @@
 	margin-right: 2.34vw;
 	object-fit: cover;
 	object-position: center;
+	aspect-ratio: 1 / 1;
 }
 
 @media screen and (min-width:1280px) {
