--- a/blocks/elements/__delete/elements__delete.css
+++ b/blocks/elements/__delete/elements__delete.css
@@ -3,6 +3,7 @@
 	top: 19px;
 	right: 21px;
 	background-image: url(../../../Images/Elements/Group.svg);
+	background-repeat: no-repeat;
 	border: none;
 	width: 18px;
 	height: 19px;
