--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -7,6 +7,7 @@
 	border: none;
 	background-color: transparent;
 	background-image: url(../../../Images/Profile/Close-Icon.svg);
+	background-repeat: no-repeat;
 	opacity: 1;
 	transition: opacity 1s ease;
 }
