fix: center backgound

--- a/blocks/elements/__delete/elements__delete.css
+++ b/blocks/elements/__delete/elements__delete.css
@@ -4,6 +4,7 @@
 	right: 21px;
 	background-image: url(../../../Images/Elements/Group.svg);
 	background-repeat: no-repeat;
+	background-position: center;
 	border: none;
 	width: 18px;
 	height: 19px;
