--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,6 +8,7 @@
 	background-color: transparent;
 	background-image: url(../../../Images/Profile/Close-Icon.svg);
 	background-repeat: no-repeat;
+	background-position: center;
 	opacity: 1;
 	transition: opacity 1s ease;
 }
