--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,7 +1,8 @@
-.popup__submit {
+.popup__button {
 	background-color: #000;
 	color: #FFF;
 	border: none;
+	border-radius: 2px;
 	width: 100%;
 	height: 3.9vw;
 	margin: 0 auto 0 auto;
@@ -14,20 +15,20 @@
 	transition: background-color 1s ease;
 }
 
-.popup__submit:hover {
+.popup__button:hover {
 	background-color: rgba(0, 0, 0, 0.8);
 	cursor: pointer;
 }
 
 @media screen and (min-width:1280px) {
-	.popup__submit {
+	.popup__button {
 		width: 358px;
 		height: 50px;
 	}
 }
 
 @media screen and (max-width:576px) {
-	.popup__submit {
+	.popup__button {
 		height: 46px;
 		font-size: 14px;
 		line-height: 17px;
