--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -1,4 +1,4 @@
-.popup__button {
+.popup__submit {
 	background-color: #000;
 	color: #FFF;
 	border: none;
@@ -15,20 +15,20 @@
 	transition: background-color 1s ease;
 }
 
-.popup__button:hover {
+.popup__submit:hover {
 	background-color: rgba(0, 0, 0, 0.8);
 	cursor: pointer;
 }
 
 @media screen and (min-width:1280px) {
-	.popup__button {
+	.popup__submit {
 		width: 358px;
 		height: 50px;
 	}
 }
 
 @media screen and (max-width:576px) {
-	.popup__button {
+	.popup__submit {
 		height: 46px;
 		font-size: 14px;
 		line-height: 17px;
