feat: add server

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -8,7 +8,10 @@
 	object-fit: cover;
 	object-position: center;
 	aspect-ratio: 1 / 1;
+	z-index: 1;
+	position: relative;
 }
+
 
 @media screen and (min-width:1280px) {
 	.profile__avatar {
