--- a/src/blocks/elements/__like/elements__like.css
+++ b/src/blocks/elements/__like/elements__like.css
@@ -4,7 +4,7 @@
 	background-image: url(../../../Images/Elements/Like.svg);
 	border: none;
 	background-color: #fff;
-	margin: 0 20px 0 auto;
+	margin: 0 0 3px 0;
 	padding: 0;
 	opacity: 1;
 	transition: opacity 1s ease;
