--- a/src/blocks/elements/__name/elements__name.css
+++ b/src/blocks/elements/__name/elements__name.css
@@ -1,6 +1,6 @@
 .elements__name {
 	text-transform: capitalize;
-	margin: 0 0 25px 21px;
+	margin: 3px 0 25px 21px;
 	padding: 0;
 	font-weight: 900;
 	text-overflow: ellipsis;
